Finally fixed image issue

--- a/_services/001.md
+++ b/_services/001.md
@@ -6,4 +6,15 @@ weight: 1
 
 # 001
 
-<img class = 'comic' src='/_comic/_comics/001/001.svg'>
+<center>
+<img class = 'comic' src='/assets/cartoon/001/s1b1.jpg'> <br />
+
+<img class = 'comic' src='/assets/cartoon/001/s1b3.jpg'> <br />
+
+<img class = 'comic' src='/assets/cartoon/001/s1b3.jpg'> <br />
+
+<img class = 'comic' src='/assets/cartoon/001/s1b4.jpg'> <br />
+
+<img class = 'comic' src='/assets/cartoon/001//s1b5.jpg'> <br />
+
+</center>
