--- a/_services/001.md
+++ b/_services/001.md
@@ -6,15 +6,14 @@ weight: 1
 
 # 001
 
-<center>
+
 <img class = 'comic' src='/assets/cartoon/001/s1b1.jpg'> <br />
 
-<img class = 'comic' src='/assets/cartoon/001/s1b3.jpg'> <br />
+<img class = 'comic' src='/assets/cartoon/001/s1b2.jpg'> <br />
 
 <img class = 'comic' src='/assets/cartoon/001/s1b3.jpg'> <br />
 
 <img class = 'comic' src='/assets/cartoon/001/s1b4.jpg'> <br />
 
-<img class = 'comic' src='/assets/cartoon/001//s1b5.jpg'> <br />
+<img class = 'comic' src='/assets/cartoon/001/001-s5-censor.jpg'>
 
-</center>
