css abd other formatting changes

--- a/_services/004.md
+++ b/_services/004.md
@@ -1,9 +1,10 @@
 ---
 title: "The IO"
+date: 2025-03-13 
 weight: 1
 ---
 
-# 003
+# 004
 
 
 <img class = 'comic' src='/assets/cartoon/004/004-s1.jpg'> <br />
@@ -11,5 +12,6 @@ weight: 1
 <img class = 'comic' src='/assets/cartoon/004/004-s2.jpg'> <br />
 
 <img class = 'comic' src='/assets/cartoon/004/004-s3.jpg'> 
+
 
 
