--- a/_services/035.md
+++ b/_services/035.md
@@ -1,18 +1,11 @@
 ---
-title: Blog
-layout: services
-description: Blog
-# intro_image: "images/illustrations/reading.svg"
-intro_image_absolute: false
-# intro_image: "images/illustrations/reading.svg"
-intro_image_absolute: false
-intro_image_hide_on_mobile: true
+title: "Post-Flight Analysis"
+date: 2025-10-12
+weight: 1
 ---
 
-# Blog
+# 035
 
-### Post-Flight Analysis
-<span class = 'blog'>
 <img class = 'comic' src='/assets/cartoon/035/035-01.jpg'> <br />
 
 <img class = 'comic' src='/assets/cartoon/035/035-02.jpg'> <br />
@@ -22,3 +15,5 @@ intro_image_hide_on_mobile: true
 <img class = 'comic' src='/assets/cartoon/035/035-04.jpg'>  <br />
 
 <img class = 'comic' src='/assets/cartoon/035/035-05.jpg'>  
+
+
