--- a/_services/036.md
+++ b/_services/036.md
@@ -1,18 +1,11 @@
 ---
-title: Blog
-layout: services
-description: Blog
-# intro_image: "images/illustrations/reading.svg"
-intro_image_absolute: false
-# intro_image: "images/illustrations/reading.svg"
-intro_image_absolute: false
-intro_image_hide_on_mobile: true
+title: "An Important Message from Olympus Logic"
+date: 2025-11-05
+weight: 1
 ---
 
-# Blog
+# 036
 
-### An Important Message from Olympus Logic
-<span class = 'blog'>
 <img class = 'comic' src='/assets/cartoon/036/036-01.jpg'> <br />
 
 <img class = 'comic' src='/assets/cartoon/036/36-02.jpg'> <br />
@@ -26,3 +19,5 @@ intro_image_hide_on_mobile: true
 <img class = 'comic' src='/assets/cartoon/036/36-06.jpg'>  <br />
 
 <img class = 'comic' src='/assets/cartoon/036/36-07.jpg'>  
+
+
